Update DefaultLauncher.java